--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,7 @@ a {
     margin: 0 auto;
     padding-top: 5px;
     height: 595px;
+    
     background-image: url("C:/Users/Justin/Desktop/Responsive-portfolio/assets/images/dark_wood.png");
 
 }
@@ -373,6 +374,7 @@ a {
     border-top: 40px;
     background-color: white;
     height: 500px;
+    max-width: 950px;
     width: 90%;
     border-color: #dddddd;
 }
@@ -390,6 +392,7 @@ a {
 
     margin-top: -25px;
     width: 50%;
+    max-width:500px;
     height: 480px;
     display: inline-block;
 
@@ -695,6 +698,37 @@ label {
         box-sizing: border-box;
         width: 100%;
         background-image: url("C:/Users/Justin/Desktop/Responsive-portfolio/assets/images/dark_wood.png");
+
+    }
+    
+    .background-portfolio {
+
+        height: 1500px;
+        box-sizing: border-box;
+        width: 100%;
+        background-image: url("C:/Users/Justin/Desktop/Responsive-portfolio/assets/images/dark_wood.png");
+
+    }
+
+    .portfolio-background {
+
+    
+        margin-top: 10px;
+        border-top: 40px;
+        margin-left: 5%;
+        background-color: white;
+        height: 800px;
+        width: 85%;
+        border: 1px solid #dddddd;
+        
+    }
+
+    .portfolio-container {
+
+        margin: 0 auto;
+        height: 1200px;
+        width: 80%;
+        margin-left: 5px;
 
     }
 
